--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ img {
 }
 
 textarea {
-  width: 98%;
+  width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -175,6 +175,12 @@ button {
   display: flex;
 }
 
+@media screen and (max-width: 767px) {
+  .header-nav-list {
+    display: none;
+  }
+}
+
 .nav-item {
   margin-right: 40px;
 }
@@ -269,4 +275,383 @@ button {
 .contact-link:hover,
 .contact-link:focus {
   color: var(--ocean);
+}
+/* Footer */
+.footer {
+  padding: 40px 0;
+  background-color: var(--navy-blue);
+}
+
+@media screen and (min-width: 1158px) {
+  .footer {
+    padding: 40px 0;
+  }
+}
+
+.footer-main {
+  margin: 0;
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-desc {
+    margin-right: 120px;
+  }
+}
+
+.footer-desc {
+  max-width: 264px;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--cloud);
+}
+
+.footer-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 72px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    justify-content: flex-start;
+    align-items: baseline;
+    gap: 72px 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-container {
+    flex-wrap: nowrap;
+    gap: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-container {
+    max-width: 584px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-container {
+    max-width: 1158px;
+  }
+}
+
+.footer-social {
+  margin: 0;
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-social {
+    margin-right: 80px;
+  }
+}
+
+.footer-subtitle {
+  display: block;
+  text-align: center;
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+}
+
+@media screen and (min-width: 768px) {
+  .footer-subtitle {
+    display: inline-block;
+  }
+}
+
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+}
+
+.footer-social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--iris);
+  border-radius: 50%;
+  transition: background-color var(--transition-func-and-dur);
+}
+
+.footer-social-icon {}
+
+.footer-social-icon {
+  fill: var(--cloud);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: var(--green);
+}
+
+.web-studio-link {
+  display: inline-block;
+  padding: 0;
+}
+
+.web-studio-footer-link {
+  display: block;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 16px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--iris);
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .web-studio-footer-link {
+    display: inline-block;
+  }
+}
+
+.footer-form-title {
+  display: block;
+  margin-bottom: 16px;
+  text-align: center;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--white);
+}
+
+@media screen and (min-width: 768px) {
+  .footer-form-title {
+    text-align: start;
+  }
+}
+
+.footer-form {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-form {
+    flex-wrap: nowrap;
+    gap: 24px;
+    align-items: flex-end;
+    justify-content: flex-start;
+  }
+}
+
+.footer-form-field {
+  background-color: transparent;
+  width: 398px;
+  height: 40px;
+  padding: 8px 16px;
+  border: 1px solid var(--white);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  outline: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: var(--white);
+}
+
+@media screen and (max-width: 427px) {
+  .footer-form-field {
+    width: 290px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer-form-field {
+    width: 264px;
+  }
+}
+
+.footer-form-field::placeholder {
+  color: var(--white);
+}
+
+.footer-form-btn {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  width: 265px;
+  height: 40px;
+  padding: 8px 24px;
+  outline: transparent;
+  cursor: pointer;
+  background-color: var(--iris);
+  border: none;
+  border-radius: 4px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: var(--white);
+
+  transition: background-color var(--transition-func-and-dur);
+}
+
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+  background-color: var(--ocean);
+  border: none;
+}
+
+
+/* Mobile-menu */
+
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
+.menu-toggle.mob-close-btn {
+  min-height: 24px;
+  min-width: 24px;
+}
+
+@media (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.mob-close-btn {
+  border: 1px solid rgba(46, 47, 66, 0.1);
+
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  padding-top: 80px;
+  padding-left: 40px;
+  padding-bottom: 40px;
+  padding-right: 35px;
+  background-color: var(--white);
+  z-index: 999;
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 16px;
+  right: 16px;
+}
+
+.mobile-menu {
+  padding: 0;
+  margin: 0;
+  margin-bottom: auto;
+}
+
+.mobile-menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+
+.mobile-menu-link {
+  display: block;
+
+  color: var(--navy-blue);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+
+  transition: color var(--transition-func-and-dur);
+}
+
+.mobile-menu-link.active {
+  color: var(--ocean);
+}
+
+.mobile-menu .link:focus {
+  color: var(--ocean);
+}
+
+.mobile-social {
+  display: flex;
+  gap: 56px;
+}
+
+@media screen and (max-width:427px) {
+  .mobile-social {
+    gap: 24px;
+  }
+}
+
+.mobile-contacts {
+  margin-bottom: 48px;
+}
+
+.mobile-contacts-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.phone-contact-link {
+  display: block;
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--iris);
+}
+
+.mail-contact-link {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--slate);
 }
