--- a/style.css
+++ b/style.css
@@ -76,10 +76,59 @@ img {
   }
 }
 
+.title-1{
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+  color: var(--navy-blue);
+  text-align: center;
+}
+
+.subtitle-1{
+  margin-bottom: 8px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--navy-blue);
+}
+
+.line{
+  border-bottom: var(--green);
+}
+
+.subtitle {
+  margin-bottom: 8px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: var(--navy-blue);
+
+  @media screen and (max-width: 768px) {
+    text-align: left;
+  }
+
+  @media screen and (min-width: 1158px) {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+  }
+}
+
+.subtitle-desc{
+  font-size: 18px;
+  text-align: left;
+}
+
 textarea {
   width: 100%;
   padding: 12px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--grey);
   border-radius: 8px;
   font-size: 1rem;
   resize: vertical;
@@ -89,8 +138,8 @@ button {
   width: 100%;
   margin-top: 20px;
   padding: 14px;
-  background-color: #0077cc;
-  color: white;
+  background-color: var(--iris);
+  color: var(--cloud);
   border: none;
   border-radius: 8px;
   font-size: 1rem;
@@ -100,12 +149,16 @@ button {
   margin-top: 20px;
   padding: 15px;
   background: #e8f5e9;
-  border-left: 5px solid #2e7d32;
+  border-left: 5px solid var(--green) ;
   border-radius: 8px;
   font-size: 1rem;
-  color: #2e7d32;
+  color: var(--slate);
 }
 
+
+.analyze-cointainer{
+  padding: 15px 15px;
+}
 
 /*header*/
 
@@ -292,12 +345,6 @@ button {
   margin: 0;
 }
 
-@media screen and (min-width: 1158px) {
-  .footer-desc {
-    margin-right: 120px;
-  }
-}
-
 .footer-desc {
   max-width: 264px;
   font-size: 16px;
@@ -306,18 +353,24 @@ button {
   color: var(--cloud);
 }
 
+@media screen and (max-width: 768px) {
+  .footer-desc {
+  text-align: center;
+  }
+}
+
 .footer-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 72px;
+  gap: 32px;
 }
 
 @media screen and (min-width: 768px) {
   .footer-container {
     justify-content: flex-start;
     align-items: baseline;
-    gap: 72px 24px;
+    gap:  24px;
   }
 }
 
@@ -331,6 +384,7 @@ button {
 @media screen and (min-width: 768px) {
   .footer-container {
     max-width: 584px;
+    gap: 32px;
   }
 }
 
@@ -533,7 +587,7 @@ button {
   background-color: transparent;
   cursor: pointer;
   border: none;
-  border-radius: 50%;
+  border-radius: 5%;
   outline: none;
 }
 
